Fix spacing within callouts

--- a/obsidian.sass
+++ b/obsidian.sass
@@ -94,7 +94,7 @@ code.language-shell
   padding: 5px
 
 ul
-  padding-left: 15px !important
+  padding-left: 20px !important
 
 @import plugin_jira
 @import plugin_kanban
